# scrap-ares

./: LICENSE  README.md  pyproject.toml
data/processed/: assign-E.csv  assign-O.csv  assign-V.csv  summon-E.csv  summon-O.csv  summon-V.csv
data/raw/: assign-E.json  assign-O.json  assign-V.json  summon-E.json  summon-O.json  summon-V.json
notebooks/: 01-scrap.ipynb  02-process.ipynb  03-analyze.ipynb
