[tool.poetry]
name = "scrap-ares"
version = "0.1.0"
description = "A light project for scrapping information from the CAM Ares service."
authors = ["Miguel Blanco Marcos <miguel.blanco.marcos@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scrap_ares"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
requests = "^2.28.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
